--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/stack": "^6.3.5",
+    "deprecated-react-native-prop-types": "^2.3.0",
     "expo": "~47.0.3",
+    "expo-camera": "~13.1.0",
     "expo-linear-gradient": "~12.0.1",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-camera": "^4.2.1",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
