--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo-google-fonts/inter": "^0.2.2",
     "@expo-google-fonts/poppins": "^0.2.2",
     "@expo-google-fonts/roboto": "^0.2.2",
+    "@react-native-community/checkbox": "^0.5.14",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
@@ -19,6 +20,7 @@
     "deprecated-react-native-prop-types": "^2.3.0",
     "expo": "~47.0.3",
     "expo-camera": "~13.1.0",
+    "expo-checkbox": "~2.2.2",
     "expo-font": "~11.0.1",
     "expo-linear-gradient": "~12.0.1",
     "expo-status-bar": "~1.4.2",
@@ -27,6 +29,7 @@
     "react-native-camera": "^4.2.1",
     "react-native-drop-shadow": "^0.0.6",
     "react-native-gesture-handler": "~2.8.0",
+    "react-native-paper": "^5.0.0",
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
