--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo-font": "~11.0.1",
     "expo-linear-gradient": "~12.0.1",
     "expo-status-bar": "~1.4.2",
+    "expo-updates": "~0.15.6",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-camera": "^4.2.1",
